<resources>
    <string name="app_name">Rainbow</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="light_green">Light green</string>
    <string name="dark_green">Dark green</string>
    <string name="light_blue">Light blue</string>
    <string name="dark_blue">Dark blue</string>
    <string name="violet">Violet</string>
    <string name="dark_violet">Dark violet</string>
</resources>