<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="false">
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">




   <LinearLayout
       android:gravity="center"
       android:id="@+id/lnr_main_red"
       android:background="@color/Red"
       android:layout_width="match_parent"
       android:layout_height="50dp"
       android:orientation="horizontal" >

       <TextView
           android:id="@+id/txt_main_red"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/red" />
   </LinearLayout>
    <LinearLayout

        android:id="@+id/lnr_main_orange"
        android:background="@color/Orange"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/txt_main_orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orange"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:id="@+id/lnr_main_yellow"
        android:background="@color/Yellow"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/txt_main_yellow"
            android:text="@string/yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:id="@+id/lnr_main_lightGreen"
        android:background="@color/LightGreen"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_green"
            android:id="@+id/txt_main_lightGreen"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lnr_main_darkGreen"
        android:background="@color/DarkGreen"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center"
        android:orientation="horizontal"
        >
        <TextView
            android:text="@string/dark_green"
            android:id="@+id/txt_main_darkGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lnr_main_lightBlue"
        android:background="@color/LightBlue"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/light_blue"
            android:id="@+id/txt_main_lightBlue"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:id="@+id/lnr_main_darkBlue"
        android:background="@color/DarkBlue"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_blue"
            android:id="@+id/txt_main_darkBlue"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:id="@+id/lnr_main_violet"
        android:background="@color/Violet"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/violet"
            android:id="@+id/txt_main_violet"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center"
        android:id="@+id/lnr_main_darkViolet"
        android:background="@color/DarkViolet"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_violet"
            android:id="@+id/txt_main_darkViolet"/>
    </LinearLayout>

</LinearLayout>
</ScrollView>